<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/textViewOpen"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/open"/>

    <TextView
        android:id="@+id/textViewHigh"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/high"/>

    <TextView
        android:id="@+id/textViewLow"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/low"/>

    <TextView
        android:id="@+id/textViewClose"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/close"/>

    <TextView
        android:id="@+id/textViewVolume"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/volume"/>

</LinearLayout>